@@ -30,6 +30,7 @@ Changelog
  * Fix: Admin HTML header now includes correct language code (Matt Westcott)
  * Fix: Unclear error message when saving image after focal point edit (Hugo van den Berg)
  * Fix: `send_mail` now correctly uses the `html_message` kwarg for HTML messages (Tiago Requeijo)
+ * Fix: Page copying no longer allowed if page model has reached its `max_count` (Andy Babic)
 
 
 2.4 (19.12.2018)
